# KitchenSagePy

./: .gitignore  README.md  import_recipe.py  pyproject.toml  requirements.txt  run.py  test_scraper.py
agent/: agent.py  fastagent.config.yaml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/mcp/: README.md  mcp_models.py  server.py
app/routers/: meal_plans.py
app/routes/: __init__.py  meal_plans.py  recipes.py
app/scrapers/: paprika_scraper.py
app/templates/: index.html  meal_plan.html  recipe.html
scripts/: init_meal_plans_table.py  reset_and_initialize_database.py  reset_database.py
static/: style.css
