[project]
name = "kitchensagepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "fastapi>=0.104.0",
    "jinja2>=3.1.2",
    "pydantic>=2.4.2",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.23.2",
]
